--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,6 @@
-attrs==19.1.0
-blis==0.2.4
-certifi==2019.3.9
-chardet==3.0.4
-cssselect==1.0.3
-cymem==2.0.2
 GetOldTweets3==0.0.10
-idna==2.8
-jsonschema==3.0.1
-lxml==4.3.3
-murmurhash==1.0.2
 numpy==1.16.4
-plac==0.9.6
-preshed==2.0.1
-pyquery==1.4.0
-pyrsistent==0.15.2
-requests==2.22.0
-six==1.12.0
 spacy==2.1.4
-srsly==0.0.6
-thinc==7.0.4
-tqdm==4.32.1
-urllib3==1.25.3
-wasabi==0.2.2
+Keras==2.2.5
+tensorflow==1.14.0
+scikit-learn==0.21.3
